# gf

./: Cargo.toml  README.md  watch.sh
src/: actions.rs  commands.rs  lib.rs  main.rs
tests/: cli.rs
